# adaptive-rollout-allocation

./: .gitignore  README.md  pyproject.toml
examples/: compare_predictors.py  demo.py
src/aroll/: __init__.py  allocation.py  buckets.py  calibration.py  env.py  history.py  predictor.py  prefix.py  pruning.py  replay.py  scoring.py  variance.py  vip.py
tests/: test_allocation.py  test_calibration.py  test_extensions.py  test_history.py  test_integration.py  test_variance.py
