[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aroll"
version = "0.1.0"
description = "Adaptive Rollout Allocation (VIP) with learned predictor, difficulty buckets, replay, pruning, and prefix-level allocation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "torch>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
